--- a/.editorconfig
+++ b/.editorconfig
@@ -46,7 +46,7 @@ file_header_template = unset
 
 # this. and Me. preferences
 dotnet_style_qualification_for_event = false
-dotnet_style_qualification_for_field = false
+dotnet_style_qualification_for_field = false:none
 dotnet_style_qualification_for_method = false
 dotnet_style_qualification_for_property = false
 
