--- a/.editorconfig
+++ b/.editorconfig
@@ -214,9 +214,17 @@ dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
-;dotnet_naming_rule.private_field_members_should_be_begins_with__.severity = suggestion
-;dotnet_naming_rule.private_field_members_should_be_begins_with__.symbols = private_field_members
-;dotnet_naming_rule.private_field_members_should_be_begins_with__.style = begins_with__
+dotnet_naming_rule.private_fields_should_be_u_pascal_case.severity = suggestion
+dotnet_naming_rule.private_fields_should_be_u_pascal_case.symbols = private_fields
+dotnet_naming_rule.private_fields_should_be_u_pascal_case.style = u_pascal_case
+
+dotnet_naming_rule.const_fields_should_be_pascal_case.severity = silent
+dotnet_naming_rule.const_fields_should_be_pascal_case.symbols = const_fields
+dotnet_naming_rule.const_fields_should_be_pascal_case.style = pascal_case
+
+dotnet_naming_rule.fields_should_be_u_pascal_case.severity = silent
+dotnet_naming_rule.fields_should_be_u_pascal_case.symbols = fields
+dotnet_naming_rule.fields_should_be_u_pascal_case.style = u_pascal_case
 
 # Symbol specifications
 
@@ -232,9 +240,17 @@ dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, meth
 dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.non_field_members.required_modifiers = 
 
-;dotnet_naming_symbols.private_field_members.applicable_kinds = field
-;dotnet_naming_symbols.private_field_members.applicable_accessibilities = private, private_protected
-;dotnet_naming_symbols.private_field_members.required_modifiers = 
+dotnet_naming_symbols.private_fields.applicable_kinds = field
+dotnet_naming_symbols.private_fields.applicable_accessibilities = private, private_protected
+dotnet_naming_symbols.private_fields.required_modifiers = 
+
+dotnet_naming_symbols.const_fields.applicable_kinds = field
+dotnet_naming_symbols.const_fields.applicable_accessibilities = private, private_protected
+dotnet_naming_symbols.const_fields.required_modifiers = const
+
+dotnet_naming_symbols.fields.applicable_kinds = field
+dotnet_naming_symbols.fields.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
+dotnet_naming_symbols.fields.required_modifiers = 
 
 # Naming styles
 
@@ -248,7 +264,7 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-;dotnet_naming_style.begins_with__.required_prefix = _
-;dotnet_naming_style.begins_with__.required_suffix = 
-;dotnet_naming_style.begins_with__.word_separator = 
-;dotnet_naming_style.begins_with__.capitalization = camel_case
+dotnet_naming_style.u_pascal_case.required_prefix = _
+dotnet_naming_style.u_pascal_case.required_suffix = 
+dotnet_naming_style.u_pascal_case.word_separator = 
+dotnet_naming_style.u_pascal_case.capitalization = pascal_case
