--- a/Kokoro/Kokoro.csproj
+++ b/Kokoro/Kokoro.csproj
@@ -21,6 +21,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Using Include="System.Diagnostics" />
+    <Using Include="System.Diagnostics.CodeAnalysis" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
     <InternalsVisibleTo Include="$(AssemblyName).Experiment" />
   </ItemGroup>
