--- a/Kokoro/Kokoro.csproj
+++ b/Kokoro/Kokoro.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Using Include="System.Diagnostics" />
     <Using Include="System.Diagnostics.CodeAnalysis" />
+    <Using Include="System.Runtime.CompilerServices" />
   </ItemGroup>
 
   <ItemGroup>
