Oops: copy-paste typo; should include all access modifiers

--- a/.editorconfig
+++ b/.editorconfig
@@ -248,7 +248,7 @@ dotnet_naming_symbols.private_fields.applicable_accessibilities = private, priva
 dotnet_naming_symbols.private_fields.required_modifiers = 
 
 dotnet_naming_symbols.const_fields.applicable_kinds = field
-dotnet_naming_symbols.const_fields.applicable_accessibilities = private, private_protected
+dotnet_naming_symbols.const_fields.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.const_fields.required_modifiers = const
 
 dotnet_naming_symbols.fields.applicable_kinds = field
