--- a/Kokoro/Common.csproj.targets
+++ b/Kokoro/Common.csproj.targets
@@ -3,5 +3,6 @@
     <Using Include="System.Diagnostics" />
     <Using Include="System.Diagnostics.CodeAnalysis" />
     <Using Include="System.Runtime.CompilerServices" />
+    <Using Include="System.Runtime.ExceptionServices" />
   </ItemGroup>
 </Project>
