A better, less cumbersome, directory structure
…especially with Visual Studio's "Add New Class" command

--- a/Kokoro/Kokoro.csproj
+++ b/Kokoro/Kokoro.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    <InternalsVisibleTo Include="$(AssemblyName).Test" />
     <InternalsVisibleTo Include="$(AssemblyName).Experiment" />
   </ItemGroup>
 
