--- a/.editorconfig
+++ b/.editorconfig
@@ -81,8 +81,11 @@ dotnet_style_prefer_conditional_expression_over_return = true
 dotnet_style_prefer_inferred_anonymous_type_member_names = true
 dotnet_style_prefer_inferred_tuple_names = true
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true
-dotnet_style_prefer_simplified_boolean_expressions = true
+;dotnet_style_prefer_simplified_boolean_expressions = true
 dotnet_style_prefer_simplified_interpolation = true
+
+# See, https://github.com/dotnet/runtime/issues/4207#issuecomment-147184273
+dotnet_style_prefer_simplified_boolean_expressions = true:silent
 
 # Field preferences
 dotnet_style_readonly_field = true
