--- a/.gitignore
+++ b/.gitignore
@@ -24,20 +24,34 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
+/*/[Dd]ebug/
+/[Dd]ebug/
+/*/[Dd]ebugPublic/
+/[Dd]ebugPublic/
+/*/[Rr]elease/
+/[Rr]elease/
+/*/[Rr]eleases/
+/[Rr]eleases/
+/*/x64/
+/x64/
+/*/x86/
+/x86/
+/*/[Ww][Ii][Nn]32/
+/[Ww][Ii][Nn]32/
+/*/[Aa][Rr][Mm]/
+/[Aa][Rr][Mm]/
+/*/[Aa][Rr][Mm]64/
+/[Aa][Rr][Mm]64/
+/*/bld/
+/bld/
+/*/[Bb]in/
+/[Bb]in/
+/*/[Oo]bj/
+/[Oo]bj/
+/*/[Ll]og/
+/[Ll]og/
+/*/[Ll]ogs/
+/[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
