Made it easy to find all unnecessary `using` directives for cleanup purposes

--- a/.editorconfig
+++ b/.editorconfig
@@ -155,6 +155,9 @@ csharp_style_unused_value_expression_statement_preference = discard_variable
 # 'using' directive preferences
 csharp_using_directive_placement = inside_namespace:suggestion
 
+# IDE0005: Using directive is unnecessary
+;dotnet_diagnostic.IDE0005.severity = warning
+
 # New line preferences
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false
