--- a/.editorconfig
+++ b/.editorconfig
@@ -158,6 +158,9 @@ csharp_style_unused_value_expression_statement_preference = discard_variable
 # 'using' directive preferences
 csharp_using_directive_placement = inside_namespace:suggestion
 
+# CS0162: Unreachable code detected
+dotnet_diagnostic.CS0162.severity = suggestion
+
 # New line preferences
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false
