Prefer UTF-8-BOM

--- a/Kokoro/Common.Usings.targets
+++ b/Kokoro/Common.Usings.targets
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <ItemGroup>
     <Using Include="System.Diagnostics" />
     <Using Include="System.Diagnostics.CodeAnalysis" />
