--- a/Kokoro.Test/Kokoro.Test.csproj
+++ b/Kokoro.Test/Kokoro.Test.csproj
@@ -40,7 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ThisAssembly" Version="1.0.9" />
+    <PackageReference Include="ThisAssembly.Project" Version="1.0.9" />
+    <PackageReference Include="ThisAssembly.Metadata" Version="1.0.9" />
     <PackageReference Include="Xunit.Combinatorial" Version="1.4.1" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
