--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ guidelines = 80 1px dotted CAFFC000, 120 1px solid 22FF0000
 
 # ---===--- ---===--- ---===---
 # Project files
-[*.{,cs,fs,vb,njs,vc,vcx,msbuild}proj{,.targets}]
+[*.{{,cs,fs,vb,njs,vc,vcx,msbuild}proj,targets}]
 
 #### Core EditorConfig Options ####
 
