--- a/Kokoro/Kokoro.csproj
+++ b/Kokoro/Kokoro.csproj
@@ -27,6 +27,6 @@
     <InternalsVisibleTo Include="$(AssemblyName).Experiment" />
   </ItemGroup>
 
-  <Import Project="..\Kokoro\Common.Usings.targets" />
+  <Import Project="Common.Usings.targets" />
 
 </Project>
