--- a/Kokoro.Test.Framework.Test/Kokoro.Test.Framework.Test.csproj
+++ b/Kokoro.Test.Framework.Test/Kokoro.Test.Framework.Test.csproj
@@ -41,17 +41,16 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="Moq" Version="4.17.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kokoro.Test.Framework\Kokoro.Test.Framework.csproj" />
-    <ProjectReference Include="..\Kokoro\Kokoro.csproj" />
   </ItemGroup>
 
   <Import Project="..\Kokoro.Common\Kokoro.Common.Usings.targets" />
 
   <ItemGroup>
-    <Using Include="Kokoro" />
     <Using Include="Kokoro.Common" />
     <Using Include="Kokoro.Common.Util" />
 
