--- a/src/Kokoro.Common/Kokoro.Common.csproj
+++ b/src/Kokoro.Common/Kokoro.Common.csproj
@@ -18,6 +18,11 @@
   -->
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.3" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <InternalsVisibleTo Include="Kokoro" />
     <InternalsVisibleTo Include="Kokoro.Test" />
     <InternalsVisibleTo Include="Kokoro.Experiment" />
