A build constant when running under test

--- a/test/Kokoro.Test.Util/Kokoro.Test.Util.csproj
+++ b/test/Kokoro.Test.Util/Kokoro.Test.Util.csproj
@@ -9,6 +9,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DefineConstants>$(DefineConstants);TEST</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
