Allow benchmark code to see internals

--- a/src/Kokoro.Common/Kokoro.Common.csproj
+++ b/src/Kokoro.Common/Kokoro.Common.csproj
@@ -27,6 +27,7 @@
     <InternalsVisibleTo Include="Kokoro" />
     <InternalsVisibleTo Include="Kokoro.Test" />
     <InternalsVisibleTo Include="Kokoro.Experiment" />
+    <InternalsVisibleTo Include="Kokoro.Experiment.Benchmark" />
 
     <InternalsVisibleTo Include="Kokoro.App" />
     <InternalsVisibleTo Include="Kokoro.App.Test" />
