Made less verbose `Unsafe` global

--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -11,5 +11,7 @@
     <Using Include="Kokoro.Common" />
     <Using Include="Kokoro.Common.Dispose" />
     <Using Include="Kokoro.Common.Sqlite.Extensions" />
+
+    <Using Include="System.Runtime.CompilerServices.Unsafe" Alias="U" />
   </ItemGroup>
 </Project>
