--- a/src/Kokoro/Kokoro.csproj
+++ b/src/Kokoro/Kokoro.csproj
@@ -8,7 +8,7 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
 
     <!--<EnablePreviewFeatures>True</EnablePreviewFeatures>-->
-    <!--<LangVersion>preview</LangVersion>-->
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <!--
