Dependency on `CommunityToolkit.HighPerformance`

--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -8,6 +8,8 @@
 
     <Using Include="System.Text" />
 
+    <Using Include="CommunityToolkit.HighPerformance" />
+
     <Using Include="Kokoro.Common" />
     <Using Include="Kokoro.Common.Dispose" />
     <Using Include="Kokoro.Common.Sqlite.Extensions" />
