--- a/src/Kokoro.Common/Kokoro.Common.csproj
+++ b/src/Kokoro.Common/Kokoro.Common.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.3" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.0.7" />
     <PackageReference Include="SauceControl.Blake2Fast" Version="2.0.0" />
+    <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.0.0-preview3" />
   </ItemGroup>
 
   <ItemGroup>
