--- a/src/Kokoro/Kokoro.Usings.targets
+++ b/src/Kokoro/Kokoro.Usings.targets
@@ -2,5 +2,6 @@
   <Import Project="..\Kokoro.Common\Kokoro.Common.Usings.targets" />
   <ItemGroup>
     <Using Include="Kokoro" />
+    <Using Include="Kokoro.Internal.Sqlite.Extensions" />
   </ItemGroup>
 </Project>
