Dependency: `CommunityToolkit.Diagnostics`
- So that we can use the shiny `Guard` APIs.

--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -8,6 +8,7 @@
 
     <Using Include="System.Text" />
 
+    <Using Include="CommunityToolkit.Diagnostics" />
     <Using Include="CommunityToolkit.HighPerformance" />
 
     <Using Include="Kokoro.Common" />
