Added implicit using

--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -13,6 +13,8 @@
 
     <Using Include="Kokoro.Common" />
     <Using Include="Kokoro.Common.Dispose" />
+
+    <Using Include="Kokoro.Common.Blake2Fast.Extensions" />
     <Using Include="Kokoro.Common.Sqlite.Extensions" />
 
     <Using Include="System.Runtime.CompilerServices.Unsafe" Alias="U" />
