--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -16,6 +16,7 @@
     <Using Include="Kokoro.Common.Text" />
 
     <Using Include="Kokoro.Common.Blake2Fast.Extensions" />
+    <Using Include="Kokoro.Common.Buffers.Extensions" />
     <Using Include="Kokoro.Common.Sqlite.Extensions" />
 
     <Using Include="System.Runtime.CompilerServices.Unsafe" Alias="U" />
