These utilities should be in the "common" project

--- a/src/Kokoro.Common/Kokoro.Common.Usings.targets
+++ b/src/Kokoro.Common/Kokoro.Common.Usings.targets
@@ -17,6 +17,7 @@
 
     <Using Include="Kokoro.Common.Blake2Fast.Extensions" />
     <Using Include="Kokoro.Common.Buffers.Extensions" />
+    <Using Include="Kokoro.Common.IO.Extensions" />
     <Using Include="Kokoro.Common.Sqlite.Extensions" />
 
     <Using Include="System.Runtime.CompilerServices.Unsafe" Alias="U" />
