Don't prefer range operator sometimes

--- a/.editorconfig
+++ b/.editorconfig
@@ -153,7 +153,7 @@ csharp_style_inlined_variable_declaration = true
 csharp_style_pattern_local_over_anonymous_function = true
 csharp_style_prefer_index_operator = true
 csharp_style_prefer_null_check_over_type_check = true
-csharp_style_prefer_range_operator = true
+csharp_style_prefer_range_operator = true:silent
 csharp_style_throw_expression = true
 csharp_style_unused_value_assignment_preference = discard_variable
 csharp_style_unused_value_expression_statement_preference = discard_variable
